fixed filters overflowing

--- a/frontend/src/components/Main.css
+++ b/frontend/src/components/Main.css
@@ -31,7 +31,7 @@ main > .row {
 }
 
 .fold-container-in {
-  max-height: 1000px;
+  max-height: 100%;
   opacity: 1;
   transition: max-height 0.6s ease-in, opacity 0.6s ease-in;
 }
